# Interpreter

./: .gitmodules  CMakeLists.txt  EBNF.txt  README.md
googletest/: CMakeLists.txt  CmakeLists.txt.in
include/: checked_program.h  input_source.h  interpreter.h  ivisitor.h  parser.h  symbol_table.h  utility.h
include/ast/: assignment.h  ast.h  ast_node.h  binary_op.h  block.h  bool_type.h  boolean_literal.h  conditional.h  expression.h  function_call.h  function_decl.h  function_param.h  function_type.h  identifier.h  if_then_else.h  num_literal.h  num_type.h  operator.h  program.h  return_stm.h  statement.h  static_type.h  unary_op.h  var_decl.h  void_type.h  while.h
include/lexer/: input_source.h  lexer.h  token.h  types.h
include/visitor/: evaluator.h  interpreter.h  ivisitor.h  typechecker.h
src/: CMakeLists.txt  evaluator.cpp  input_source.cpp  interpreter.cpp  lexer.cpp  main.cpp  operator.cpp  parser.cpp  token.cpp  typechecker.cpp  utility.cpp
tests/: CMakeLists.txt  all_tests.cpp  evaluator_tests.cpp  interpreter_tests.cpp  lexer_tests.cpp  parser_tests.cpp  typechecker_tests.cpp
tests/examples/: Add.txt  Division.txt  Multiply.txt  SimpleProgram.txt  Subtract.txt  add.txt  binary_op_type_mismatch.txt  complex_program.txt  divide_by_zero.txt  division.txt  return_type_mismatch.txt  simple_program.txt  subtract.txt  tokens.txt  while.txt
tests/include/: test_base.h  test_evaluator.h  test_interpreter.h  test_lexer.h  test_parser.h  test_typechecker.h
